syntax = "proto3";
package monitor.proto;

message SoftIrq {
    string cpu = 1;         // 标识 CPU 核心（如 "cpu0", "cpu1"）
    float hi = 2;           // 高优先级中断（High-priority tasklet）
    float timer = 3;        // 定时器中断（Timer interrupts）
    float net_tx = 4;       // 网络发送中断（Network transmit）
    float net_rx = 5;       // 网络接收中断（Network receive）
    float block = 6;        // 块设备中断（Block layer operations）
    float irq_poll = 7;     // 中断轮询（IRQ polling）
    float tasklet = 8;      // 普通任务队列（General tasklets）
    float sched = 9;        // 调度器中断（Scheduler）
    float hrtimer = 10;     // 高精度定时器（High-resolution timer）
    float rcu = 11;         // RCU 锁中断（Read-Copy-Update）
  }